added all the buttons

--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -154,6 +154,7 @@
     border: 1px solid #D1D1D1;
     border-radius: 100%;
     background-color: white;
+    margin-right: 6px;
 }
 
 .splash-svg {
