recommened project links now work, title will be underlined on hover

--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -105,6 +105,11 @@
     width: 100%;
 }
 
+.splash-recommended-content:hover .splash-recommended-title {
+    text-decoration: underline;
+    color: #037362;
+}
+
 .splash-recommended-link {
     padding-right: 24px;
     flex-basis: 40%;
