--- a/react-app/src/components/auth/form.css
+++ b/react-app/src/components/auth/form.css
@@ -31,6 +31,11 @@
   padding: 12px;
 }
 
+/*Login page specific styles */
+.login-button-container :first-child{
+  margin-right: 10px;
+}
+
 /*Sign up page specific styles*/
 #form-signup-box {
   height: 62px;
