created hamburger icon

--- a/react-app/src/components/ProjectPage/UpdatesSection/Update/Update.css
+++ b/react-app/src/components/ProjectPage/UpdatesSection/Update/Update.css
@@ -20,3 +20,18 @@
   width: calc(8/12 * 100%);
   margin-left: calc(2/12 * 100%);
 }
+
+.hamburger-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 60px;
+  left: -6px;
+}
+
+.hamburger-icon {
+  height: 48px;
+  width: 48px;
+  fill: #F97B62;
+}
