--- a/react-app/src/components/ProjectPage/UpdatesSection/Update/Update.css
+++ b/react-app/src/components/ProjectPage/UpdatesSection/Update/Update.css
@@ -132,3 +132,27 @@
   height: 16px;
   vertical-align: middle;
 }
+
+.update-readmore-link {
+  border: 1px solid rgb(209, 209, 209);
+  padding: 10px 18px;
+  font-size: 14px;
+}
+
+.update-readmore:hover {
+  box-shadow: 0px 2px 5px rgba(22, 22, 22, 0.16);
+  border-color: rgb(34, 34, 34);
+}
+
+.update-readmore-container {
+  display: flex;
+  align-items: center;
+  color: rgb(34, 34, 34);
+}
+
+.update-readmore-icon {
+  margin-left: 6px;
+  height: 20px;
+  width: 20px;
+  vertical-align: middle;
+}
