--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -69,6 +69,17 @@ li {
   background-color: rgb(80, 80, 80)
 }
 
+.grid-container {
+  margin: 0 auto;
+  padding-left: 60px;
+  padding-right: 60px;
+  max-width: 1366px;
+}
+
+.grid-row {
+  margin: 0 -18px;
+}
+
 .border-bottom-gray {
   border-bottom: 1px solid #E8E8E8;
 }
@@ -95,4 +106,13 @@ li {
 
 .pb3 {
   padding-bottom: 18px;
+}
+
+.pb8 {
+  padding-bottom: 48px;
+}
+
+.py6 {
+  padding-top: 36px;
+  padding-bottom: 36px;
 }
