--- a/react-app/src/GlobalStyleSheets/font.css
+++ b/react-app/src/GlobalStyleSheets/font.css
@@ -2,6 +2,22 @@
   font-size: 12px;
 }
 
+.font-size--14 {
+  font-size: 14px;
+}
+
+.font-size--24 {
+  font-size: 24px;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.bold {
+  font-weight: bold;
+}
+
 .text-right {
   text-align: right;
 }
