--- a/react-app/src/GlobalStyleSheets/font.css
+++ b/react-app/src/GlobalStyleSheets/font.css
@@ -6,8 +6,14 @@
   font-size: 14px;
 }
 
+.font-size--16 {
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .font-size--24 {
   font-size: 24px;
+  line-height: 30px;
 }
 
 .uppercase {
@@ -16,6 +22,10 @@
 
 .bold {
   font-weight: bold;
+}
+
+.font-weight--400 {
+  font-weight: 400;
 }
 
 .text-right {
