--- a/react-app/src/GlobalStyleSheets/border.css
+++ b/react-app/src/GlobalStyleSheets/border.css
@@ -1,6 +1,5 @@
 .border-top {
   border-top: 1px solid #DCDEDD;
-
 }
 
 .border-bottom {
@@ -9,4 +8,8 @@
 
 .border-bottom-gray {
   border-bottom: 1px solid #E8E8E8;
+}
+
+.border-gray {
+  border: 1px solid #E8E8E8;
 }
