--- a/react-app/src/GlobalStyleSheets/spacers.css
+++ b/react-app/src/GlobalStyleSheets/spacers.css
@@ -1,4 +1,8 @@
 /*Margin left*/
+.ml-auto {
+  margin-left: auto;
+}
+
 .ml1 {
   margin-left: 6px;
 }
@@ -26,12 +30,20 @@
 }
 
 /* Margin bottom */
+.mb2 {
+  margin-bottom: 12px;
+}
+
 .mb3 {
   margin-bottom: 18px;
 }
 
 .mb5 {
   margin-bottom: 30px;
+}
+
+.p3 {
+  padding: 18px;
 }
 
 .pl2 {
