--- a/react-app/src/GlobalStyleSheets/index.css
+++ b/react-app/src/GlobalStyleSheets/index.css
@@ -27,9 +27,9 @@ a {
   color: rgb(40, 40, 40);
 }
 
-a:hover {
+/* a:hover {
   color: rgb(3, 115, 98);
-}
+} */
 
 .underline:hover {
   text-decoration: underline;
