faq right side styling

--- a/react-app/src/GlobalStyleSheets/border.css
+++ b/react-app/src/GlobalStyleSheets/border.css
@@ -13,3 +13,11 @@
 .border-gray {
   border: 1px solid #E8E8E8;
 }
+
+.border-left {
+  border-left: 1px solid #DCDEDD;
+}
+
+.border3px {
+  border-width: 3px;
+}
