--- a/react-app/src/GlobalStyleSheets/button.css
+++ b/react-app/src/GlobalStyleSheets/button.css
@@ -53,3 +53,12 @@
   padding: 10px 18px;
   font-size: 14px;
 }
+
+.btn-tertiary {
+  background-color: rgb(70, 70, 70);
+  color: #fff;
+}
+
+.btn-tertiary:hover {
+  background-color: #000;
+}
