refactored project-nav-bar

--- a/react-app/src/GlobalStyleSheets/index.css
+++ b/react-app/src/GlobalStyleSheets/index.css
@@ -39,6 +39,10 @@ li {
   list-style: none;
 }
 
+.inline-b {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
@@ -94,4 +98,8 @@ li {
 
 .hidden {
   display: none;
+}
+
+.sticky {
+  position: sticky;
 }
