--- a/react-app/src/GlobalStyleSheets/font.css
+++ b/react-app/src/GlobalStyleSheets/font.css
@@ -3,6 +3,11 @@
   line-height: 18px;
 }
 
+.font-size--13 {
+  font-size: 13px;
+  line-height: 18px;
+}
+
 .font-size--14 {
   font-size: 14px;
   line-height: 24px;
@@ -13,9 +18,18 @@
   line-height: 24px;
 }
 
+.font-size--21 {
+  font-size: 21px;
+  line-height: 30px;
+}
+
 .font-size--24 {
   font-size: 24px;
   line-height: 30px;
+}
+
+.lsp-2 {
+  letter-spacing: 0.2px;
 }
 
 .uppercase {
