--- a/react-app/src/GlobalStyleSheets/button.css
+++ b/react-app/src/GlobalStyleSheets/button.css
@@ -49,14 +49,21 @@
   background-color: rgb(80, 80, 80)
 }
 
+.btn-small {
+  padding: 9px 12px;
+  font-size: 12px;
+}
+
 .btn-medium {
   padding: 10px 18px;
   font-size: 14px;
 }
 
 .btn-tertiary {
-  background-color: rgb(70, 70, 70);
-  color: #fff;
+  background-color: rgb(209, 209, 209);
+  color: rgb(34, 34, 34);
+  border: 1px solid rgb(209, 209, 209);
+
 }
 
 .btn-tertiary:hover {
