upload file button works

--- a/react-app/src/GlobalStyleSheets/button.css
+++ b/react-app/src/GlobalStyleSheets/button.css
@@ -67,5 +67,7 @@
 }
 
 .btn-tertiary:hover {
-  background-color: #000;
+  background-color: rgb(105, 105, 105);
+  color: white;
+  fill: white;
 }
